--- a/package.json
+++ b/package.json
@@ -2,30 +2,34 @@
   "name": "vizec",
   "version": "1.0.0",
   "description": "Techno Audio Visualizer - Modular audio visualization with transparent overlay",
-  "main": "dist/main/index.js",
+  "keywords": [
+    "audio",
+    "electron",
+    "music",
+    "techno",
+    "visualizer"
+  ],
+  "license": "MIT",
+  "author": "",
+  "main": "dist/main/main/index.js",
   "scripts": {
     "start": "npm run build && electron .",
     "dev": "npm run build && electron .",
-    "build": "npm run build:main && npm run build:preload && npm run build:renderer && npm run copy-assets",
+    "build": "node scripts/build.mjs",
     "build:main": "tsc --project tsconfig.main.json",
     "build:preload": "tsc --project tsconfig.preload.json",
-    "build:renderer": "esbuild src/renderer/control/index.ts src/renderer/visualizer/index.ts --bundle --outdir=dist/renderer --splitting --format=esm --platform=browser --external:electron --loader:.ts=ts",
-    "copy-assets": "powershell -Command \"Copy-Item -Path 'src/renderer/visualizer/*.html' -Destination 'dist/renderer/visualizer/' -Force; Copy-Item -Path 'src/renderer/visualizer/*.css' -Destination 'dist/renderer/visualizer/' -Force; Copy-Item -Path 'src/renderer/control/*.html' -Destination 'dist/renderer/control/' -Force; Copy-Item -Path 'src/renderer/control/*.css' -Destination 'dist/renderer/control/' -Force\"",
     "watch": "tsc -w",
     "package": "electron-builder",
     "package:win": "electron-builder --win",
     "package:mac": "electron-builder --mac",
-    "package:linux": "electron-builder --linux"
+    "package:linux": "electron-builder --linux",
+    "lint": "oxlint",
+    "lint:fix": "oxlint --fix"
   },
-  "keywords": [
-    "electron",
-    "audio",
-    "visualizer",
-    "techno",
-    "music"
-  ],
-  "author": "",
-  "license": "MIT",
+  "dependencies": {
+    "p5": "^1.9.0",
+    "three": "^0.160.0"
+  },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/p5": "^1.7.6",
@@ -33,14 +37,12 @@
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
     "esbuild": "^0.27.2",
+    "esbuild-plugin-import-glob": "^0.1",
+    "oxlint": "^1.38.0",
     "typescript": "^5.3.2"
   },
-  "dependencies": {
-    "p5": "^1.9.0",
-    "three": "^0.160.0"
-  },
   "build": {
-    "appId": "com.vizec.app",
+    "appId": "com.nns.vizec",
     "productName": "Vizec",
     "directories": {
       "output": "release"
