--- a/tsconfig.preload.json
+++ b/tsconfig.preload.json
@@ -14,6 +14,6 @@
     "sourceMap": true,
     "moduleResolution": "node"
   },
-  "include": ["src/preload/**/*", "src/shared/**/*"],
+  "include": ["src/preload/**/*", "src/shared/**/*", "src/global.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
