--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "dependencies": {
     "p5": "^1.9.0",
-    "three": "^0.160.0"
+    "three": "^0.160.0",
+    "vue": "^3.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
